# clock-gui

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  lv_conf.h
files/: sleepcare-gui.service
include/: sleepcare_proto.h
sleepcare-core/: CMakeLists.txt
sleepcare-core/files/: sleepcare-core.service
sleepcare-core/src/: alert_local.cpp  alert_local.h  config.h  eye_socket.cpp  eye_socket.h  hr_buffer.cpp  hr_buffer.h  main.cpp  nsd_advertiser.cpp  nsd_advertiser.h  protocol.cpp  protocol.h  qr_writer.cpp  qr_writer.h  risk_socket.cpp  risk_socket.h  session.cpp  session.h  tls.cpp  tls.h  ws_server.cpp  ws_server.h
src/: Buzzer.hpp  ClockApp.hpp  DrowsinessBridge.hpp  QrOverlay.hpp  main.cpp
